[project]
name = "test-uv"
version = "0.1.0"
description = "First test of uv"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hello = "test_uv.app:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]


[tool.ruff]
line-length = 120
indent-width = 4
